@@ -1,3 +1,10 @@
+2017-05-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/gpmsg.c,
+    gputils/gpvo.c:
+    Changed the print format: "%zu" --> "%"SIZE_FMTu
+    Bugfix: "#303 Bad chars in COFF file"
+    Thanks to Patrick Hayes for the report.
+
 2017-04-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * libgputils/gpwriteobj.c:
     An string table optimisation on proposal of Pete Restall.
